<resources>
    <string name="app_name">Time2Meet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="prompt_non_account">"Don't have an account?</string>
    <string name="create_account">"Create account"</string>
    <string name="prompt_alr_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="fullname">Full name</string>
    <string name="dob">DoB</string>
    <string name="phone_num">Phone Number</string>
    <string name="sign_up">Sign up</string>
    <string name="all_meetings">All meetings</string>
    <string name="upcoming_meetings">Upcoming meetings</string>
    <string name="meeting_name">Meeting name</string>
    <string name="start_available_date">Starting available date</string>
    <string name="end_available_date">Ending available date</string>
    <string name="optional_time">Official time (Optional)</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="meeting">Meeting</string>
    <string name="official_time">Official date</string>
    <string name="meeting_id">Meeting ID</string>
    <string name="host">Host</string>
    <string name="view_attendees">View attendees</string>
    <string name="view_availability">View availability</string>
    <string name="edit_meeting">Edit meeting</string>
    <string name="attendance_list">Attendance List</string>
    <string name="attendees">Attendees</string>
    <string name="enter_username">Enter attendee username</string>
    <string name="cancel">Cancel</string>
    <string name="invite">Invite</string>
    <string name="about_me">About me</string>
    <string name="user_profile">User Profile</string>
    <string name="availability">Availability</string>
    <string name="available_participants">Number of available participants</string>
    <string name="selected_availability">Selected availability</string>
    <string name="enter_meeting">Enter meeting code</string>
    <string name="join_meeting">Join meeting</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_password">Edit Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="meeting_start_date">Available from</string>
    <string name="meeting_end_date">Available to</string>
    <string name="meeting_proposed_date">Official date</string>
    <string name="meeting_location">Location</string>
    <string name="meeting_time_undecided">Undecided</string>
    <string name="delete_meeting">Delete meeting</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_stm">Do you want to delete this meeting</string>
    <string name="official_time_optional">Official date (Optional)</string>
    <string name="invite_attendee">Invite Attendee</string>
    <string name="remove_attendee">Remove this attendee?</string>
    <string name="remove">remove</string>
    <string name="availability_board">Availability board</string>
</resources>