<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view_meeting.FragmentViewMeeting"
        android:orientation="vertical"
        tools:viewBindingIgnore="true"
        android:background="@color/background"
        >

        <include
            android:id="@+id/include"
            layout="@layout/action_bar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/meeting_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_name"
            android:textSize="@dimen/action_bar_text_size"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/content_margin"
            app:layout_constraintTop_toBottomOf="@+id/include"
            android:layout_marginTop="@dimen/action_bar_text_size"/>

        <TextView
            android:id="@+id/meeting_desc_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_start_date"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/descriptive_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/meeting_name"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/action_bar_text_size" />
        <TextView
            android:id="@+id/meeting_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/display_info_text_size"
            android:text="@string/meeting_start_date"
            app:layout_constraintTop_toBottomOf="@id/meeting_desc_startDate"
            app:layout_constraintStart_toStartOf="@id/meeting_desc_startDate"
            android:layout_marginTop="@dimen/vertical_within_items"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/meeting_desc_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_end_date"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/descriptive_text"
            app:layout_constraintTop_toBottomOf="@id/meeting_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/action_bar_text_size"/>
        <TextView
            android:id="@+id/meeting_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/display_info_text_size"
            android:text="@string/meeting_end_date"
            app:layout_constraintTop_toBottomOf="@id/meeting_desc_endDate"
            app:layout_constraintStart_toStartOf="@id/meeting_desc_endDate"
            android:layout_marginTop="@dimen/vertical_within_items"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meeting_desc_proposed_time"
            android:text="@string/meeting_proposed_time"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/descriptive_text"
            app:layout_constraintTop_toBottomOf="@id/meeting_startDate"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/vertical_between_items"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meeting_proposed_time"
            android:textSize="@dimen/display_info_text_size"
            android:text="@string/meeting_time_undecided"
            app:layout_constraintTop_toBottomOf="@id/meeting_desc_proposed_time"
            app:layout_constraintStart_toStartOf="@id/meeting_desc_proposed_time"
            android:layout_marginTop="@dimen/vertical_within_items"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meeting_desc_location"
            android:text="@string/meeting_location"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/descriptive_text"
            app:layout_constraintTop_toBottomOf="@id/meeting_proposed_time"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/vertical_between_items"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meeting_location"
            android:textSize="@dimen/display_info_text_size"
            android:text="@string/meeting_location"
            app:layout_constraintTop_toBottomOf="@id/meeting_desc_location"
            app:layout_constraintStart_toStartOf="@id/meeting_desc_location"
            android:layout_marginTop="@dimen/vertical_within_items"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meeting_desc_meeting_id"
            android:text="@string/meeting_id"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/descriptive_text"
            app:layout_constraintTop_toBottomOf="@id/meeting_location"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/vertical_between_items"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meeting_meeting_id"
            android:textSize="@dimen/display_info_text_size"
            android:text="@string/meeting_id"
            app:layout_constraintTop_toBottomOf="@+id/meeting_desc_meeting_id"
            app:layout_constraintStart_toStartOf="@+id/meeting_desc_meeting_id"
            android:layout_marginTop="@dimen/vertical_within_items"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meeting_desc_host"
            android:text="@string/host"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/descriptive_text"
            app:layout_constraintTop_toBottomOf="@id/meeting_meeting_id"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/vertical_between_items"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meeting_host"
            android:textSize="@dimen/display_info_text_size"
            android:text="@string/host"
            app:layout_constraintTop_toBottomOf="@+id/meeting_desc_host"
            app:layout_constraintStart_toStartOf="@+id/meeting_desc_host"
            android:layout_marginTop="@dimen/vertical_within_items"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meeting_desc_description"
            android:text="@string/description"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/descriptive_text"
            app:layout_constraintTop_toBottomOf="@id/meeting_host"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginTop="@dimen/vertical_between_items"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meeting_description"
            android:textSize="@dimen/display_info_text_size"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@+id/meeting_desc_description"
            app:layout_constraintStart_toStartOf="@+id/meeting_desc_description"
            android:layout_marginTop="@dimen/vertical_within_items"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/meeting_btn_view_attendees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_attendees"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/meeting_btn_view_availability"
            android:layout_marginBottom="@dimen/content_margin"
            android:backgroundTint="@color/button_background"/>

        <Button
            android:id="@+id/meeting_btn_view_availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_availability"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/meeting_btn_view_attendees"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/content_margin"
            android:backgroundTint="@color/button_background"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>