<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="180dp"
    android:background="@drawable/popup_border">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginTop="20dp"
        android:text="@string/enter_meeting"
        android:textColor="@color/descriptive_text"
        android:textSize="@dimen/display_info_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textFontWeight="700"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/edit_meeting_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginEnd="@dimen/content_margin"
        android:layout_marginTop="10dp"
        android:background="@color/background"
        android:padding="5dp"
        android:textColor="@color/descriptive_text"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:inputType="number"/>

    <Button
        android:id="@+id/btn_cancel_join"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/cancel"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_meeting_ID"
        android:textColor="@color/button_background"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/btn_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/content_margin"

        android:text="@string/join_meeting"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_meeting_ID"
        android:backgroundTint="@color/button_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>