<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.FragmentEditPassword">

    <include layout="@layout/action_bar" />

    <TextView
        android:id="@+id/desc_current_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginTop="70sp"
        android:text="@string/current_password"
        android:textColor="@color/descriptive_text"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_current_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginEnd="@dimen/content_margin"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc_current_password"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/desc_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textColor="@color/descriptive_text"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="@id/edit_current_pass"
        app:layout_constraintTop_toBottomOf="@id/edit_current_pass" />

    <EditText
        android:id="@+id/edit_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginEnd="@dimen/content_margin"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/desc_new_password"
        app:layout_constraintTop_toBottomOf="@id/desc_new_password"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/desc_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@color/descriptive_text"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="@id/desc_new_password"
        app:layout_constraintTop_toBottomOf="@id/edit_new_password" />

    <EditText
        android:id="@+id/edit_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginEnd="@dimen/content_margin"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/desc_confirm_password"
        android:singleLine="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>